--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React Pokedex</title>
   </head>
   <body style="margin: 0; height: 100%; background-color:#f8fbfb;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
